Fix T79272: Dimensions fail on negative scaled axis